# rtc-aigc-embedded-demo

./: .gitignore  0001-add-atoms3r-board.patch  0001-feat-disable-volc-esp-libs.patch  0001-fix-disable-volc-engine-in-esp.patch  README.md
client/beken/: 0001-enable-vlm.patch
client/espressif/esp32s3_demo/: CMakeLists.txt  LICENSE.txt  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32s3
client/espressif/esp32s3_demo/components/: README.md
client/espressif/esp32s3_demo/components/VolcEngineRTCLite/: CMakeLists.txt  idf_component.yml
client/espressif/esp32s3_demo/components/VolcEngineRTCLite/include/: PLACEHOLDER  VolcEngineRTCLite.h
client/espressif/esp32s3_demo/components/VolcEngineRTCLite/libs/esp32s3/: LICENSE  PLACEHOLDER
client/espressif/esp32s3_demo/components/conv_ai/: CMakeLists.txt
client/espressif/esp32s3_demo/components/conv_ai/inc/: volc_conv_ai.h
client/espressif/esp32s3_demo/main/: AudioPipeline.c  AudioPipeline.h  CMakeLists.txt  Config.h  CozeBotUtils.c  CozeBotUtils.h  Kconfig.projbuild  RtcBotUtils.c  RtcBotUtils.h  RtcHttpUtils.c  RtcHttpUtils.h  VolcRTCDemo.c  common.h  configuration_ap.c  configuration_ap.h  idf_component.yml  network.c  network.h
client/espressif/esp32s3_demo/main/assets/: emo_angry1.ebm  emo_angry2.ebm  emo_happy1.ebm  emo_happy2.ebm  emo_neutral.ebm  emo_sad1.ebm  emo_sad2.ebm  emo_wink.ebm  no_wifi.ebm  regist.ebm
docs/: QUICK_START_BEKEN.md  QUICK_START_ESP.md  TTS_BURST.md
server/src/: AccessToken.py  README.md  RtcAigcConfig.py  RtcAigcService.py  RtcApiRequester.py  vision.patch
(+20 files in other folders)
